--- a/ffg/src/app/app.component.html
+++ b/ffg/src/app/app.component.html
@@ -1,5 +1,6 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <h1>{{title}}</h1>
-<app-players></app-players>
-
+<app-leaderboard></app-leaderboard>
+<app-messages></app-messages>
+<alert type="success">Welcome To ngx-bootstrap</alert>
 <router-outlet></router-outlet>
