--- a/ffg/src/app/app.component.html
+++ b/ffg/src/app/app.component.html
@@ -1,6 +1,7 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<h1>{{title}}</h1>
-<app-leaderboard></app-leaderboard>
-<app-messages></app-messages>
-<alert type="success">Welcome To ngx-bootstrap</alert>
-<router-outlet></router-outlet>
+<div class="container">
+  <app-messages></app-messages>
+  <app-course></app-course>
+  <app-leaderboard></app-leaderboard>
+  <router-outlet></router-outlet>
+</div>
