--- a/ffg/src/app/components/player/player.component.html
+++ b/ffg/src/app/components/player/player.component.html
@@ -1,5 +1,4 @@
-<div *ngIf="player">
-  <span class="id d-none">{{id}}</span>
+<div *ngIf="player" class="row w-100" id="player{{id}}">
   <div class="col-1 pl-0 pr-2 d-flex align-items-center justify-content-center">
     <h4 class="position m-0">{{currentPosition}}</h4>
   </div>
@@ -9,7 +8,7 @@
     </div>
   </div>
   <div class="col-3 px-2 d-flex align-items-center justify-content-center">
-    <h5 class="thru m-0"></h5>
+    <h5 class="thru m-0">{{thru}}</h5>
   </div>
   <div class="col-3 pl-2 pr-0 d-flex flex-column align-items-end justify-content-between">
     <h6 class="score m-0">{{score}}</h6>
