update for new interface

--- a/ffg/src/app/components/leaderboard/leaderboard.component.html
+++ b/ffg/src/app/components/leaderboard/leaderboard.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="leaderboardReady">
+<div *ngIf="leaderboard">
   <div class="row">
     <h2 class="col-12 mt-5">{{tournamentName}}</h2>
   </div>
