--- a/ffg/src/app/app.component.html
+++ b/ffg/src/app/app.component.html
@@ -1,5 +1,5 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<app-navbar></app-navbar>
+<app-header></app-header>
 <div class="container">
   <router-outlet></router-outlet>
 </div>
