--- a/ffg/src/app/draft/details/details.component.html
+++ b/ffg/src/app/draft/details/details.component.html
@@ -1,3 +1,3 @@
-<div *ngIf="tournament">
+<div *ngIf="tournament !== null">
   <h2 class="text-center">{{tournament.year}} {{tournament.name}}</h2>
 </div>
