--- a/ffg/src/app/header/header.component.html
+++ b/ffg/src/app/header/header.component.html
@@ -1,18 +1,36 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+<nav class="navbar navbar-expand navbar-dark bg-dark fixed-top">
   <div class="container">
     <a class="navbar-brand" href="/">FFG</a>
     <div class="collapse navbar-collapse" id="navbarText">
       <ul class="navbar-nav w-100">
-        <li *ngIf="!authService.isLoggedIn" class="nav-item">
-          <a class="nav-link" href="/login">Login</a>
-        </li>
-        <li *ngIf="authService.isLoggedIn" class="nav-item">
-          <a class="nav-link" (click)="authService.logout()">Logout</a>
-        </li>
-        <li *ngIf="authService.isLoggedIn" class="nav-item ml-auto">
-          <a class="btn btn-primary" href="https://console.firebase.google.com/project/ffgolf/database" target="_blank">View Database</a>
+        <li class="nav-item ml-auto">
+          <div *ngIf="!authService.isLoggedIn">
+            <button class="btn btn-lg btn-outline-primary" (click)="open(content)">Login</button>
+          </div>
+          <div *ngIf="authService.isLoggedIn" ngbDropdown class="d-inline-block">
+            <button class="btn btn-outline-primary" id="dropdownBasic1" ngbDropdownToggle>Hello {{email}}</button>
+            <div ngbDropdownMenu aria-labelledby="dropdownBasic1">
+              <a ngbDropdownItem href="https://console.firebase.google.com/project/ffgolf/database" target="_blank">View Database</a>
+              <a ngbDropdownItem (click)="authService.logout()">Logout</a>
+            </div>
+          </div>
         </li>
       </ul>
     </div>
   </div>
 </nav>
+<div class="py-5"></div>
+<ng-template #content let-modal>
+  <div class="card border-info">
+    <div class="card-header">Login</div>
+    <div class="card-body">
+      <div class="row">
+        <div class="col-12">
+          <input type="text" class="form-control mb-2" placeholder="Email" #userEmail required autofocus>
+          <input type="password" class="form-control mb-2" placeholder="Password" #userPassword required>
+          <button class="btn btn-lg btn-primary btn-block mb-1" (click)="login(userEmail, userPassword)">Login</button>
+        </div>
+      </div>
+    </div>
+  </div>
+</ng-template>
