--- a/ffg/src/styles.scss
+++ b/ffg/src/styles.scss
@@ -1,3 +1,3 @@
 /* You can add global styles to this file, and also import other style files */
-
+@import '../node_modules/firebaseui/dist/firebaseui.css';
 @import "../node_modules/bootstrap/scss/bootstrap.scss";
