--- a/ffg/src/app/draft/details/details.component.html
+++ b/ffg/src/app/draft/details/details.component.html
@@ -1,14 +1,11 @@
-<div *ngIf="tournament !== null">
-  <h2 class="text-center">{{tournament.year}} {{tournament.name}}</h2>
-</div>
-<div *ngIf="teams">
-  <ul class="list-group">
-    <li class="list-group-item" *ngFor="let team of teams">
-      <div class="d-flex justify-content-between">
-        <h4>{{team.email}}</h4>
-        <button *ngIf="!team.inDraft" class="btn btn-primary btn-sm" (click)="addTeamToDraft(team,tournament)">Add to Draft</button>
-        <button *ngIf="team.inDraft" class="btn btn-primary btn-sm" (click)="removeTeamFromDraft(team,tournament)">Remove from Draft</button>
-      </div>
+<div *ngIf="draft">
+  <h2 class="text-center">{{draft.year}} {{draft.name}}</h2>
+  <div class="d-flex justify-content-end">
+    <button (click)="startDraft()" class="btn btn-primary btn-lg">Start Draft</button>
+  </div>
+  <ul class="list-group py-4">
+    <li class="list-group-item" *ngFor="let user of users | async">
+      <app-team [user]="user"></app-team>
     </li>
   </ul>
 </div>
