--- a/ffg/src/app/draft/list/list.component.html
+++ b/ffg/src/app/draft/list/list.component.html
@@ -1,16 +1,17 @@
-<button class="btn btn-lg btn-outline-primary" (click)="open(content)">Create New Draft</button>
-
-<ul *ngIf="drafts.length" class="list-group">
+<div class="mb-4">
+  <button class="btn btn-lg btn-outline-primary" (click)="open(content)">Create New Draft</button>
+</div>
+<ul *ngIf="drafts" class="list-group">
   <li class="list-group-item" *ngFor="let draft of drafts">
     <div class="d-flex justify-content-between align-items-center w-100">
-      <h4>{{draft.name}}</h4>
-      <a class="btn btn-primary" [routerLink]="['/draft', draft.docId]">View Draft</a>
+      <h4>{{draft.payload.doc.data().name}}</h4>
+      <a class="btn btn-primary" [routerLink]="['/draft', draft.payload.doc.id]">View Draft</a>
     </div>
   </li>
 </ul>
 <ng-template #content let-modal>
   <div class="modal-body">
-    <ul *ngIf="upcomming.length" class="list-group list-group-flush">
+    <ul *ngIf="upcomming" class="list-group list-group-flush">
       <li class="list-group-item" *ngFor="let tournament of upcomming">
         <div class="row">
           <div class="col-10">
