--- a/app/src/app/header/header.component.html
+++ b/app/src/app/header/header.component.html
@@ -9,7 +9,9 @@
             <button class="btn btn-lg btn-outline-primary" (click)="open(content)">Login</button>
           </div>
           <div *ngIf="authService.isLoggedIn" ngbDropdown class="d-inline-block">
-            <button class="btn btn-outline-primary" id="dropdownBasic1" ngbDropdownToggle>Hello <span *ngIf="email">{{email}}</span></button>
+            <button class="btn btn-outline-primary" id="dropdownBasic1" ngbDropdownToggle>
+              Hello <span *ngIf="display">{{display}}</span>
+            </button>
             <div ngbDropdownMenu aria-labelledby="dropdownBasic1">
               <a ngbDropdownItem href="draft">Drafts</a>
               <a ngbDropdownItem href="https://console.firebase.google.com/project/ffgolf/database" target="_blank">View Database</a>
@@ -26,6 +28,21 @@
   <div class="card border-info">
     <div class="card-header">Login</div>
     <div class="card-body">
+      <div class="row">
+        <div class="col-12">
+          <form [formGroup]="signInForm" (ngSubmit)="login()">
+            <div class="form-group">
+              <label for="signInEmail">Email Address</label>
+              <input formControlName="email" type="email" class="form-control" id="signInEmail" aria-describedby="emailHelp" placeholder="Enter email">
+            </div>
+            <div class="form-group">
+              <label for="signInPassword">Password</label>
+              <input formControlName="password" type="password" class="form-control" id="signInPassword" placeholder="Password">
+            </div>
+            <button type="submit" class="btn btn-primary mb-2">Sign In</button>
+          </form>
+        </div>
+      </div>
       <div class="row">
         <div class="col-12">
           <firebase-ui (signInSuccessWithAuthResult)="successCallback($event)" (signInFailure)="errorCallback($event)"></firebase-ui>
